# claude-plugin-connector

./: .deepsource.toml  .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  README.md  conftest.py  pytest.ini  release-please-config.json  requirements-dev.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: contract-models-release.yml  release-please.yml  schemas-publish.yml  tests.yml  validator-package.yml  validator-release.yml
agents/: api-connector-creator.md  connector-provider-researcher.md  connector-schema-validator.md  db-connector-creator.md  endpoint-creator.md  storage-connector-creator.md
contract-models/: README.md  pyproject.toml
contract-models/k2m/: __init__.py
contract-models/k2m/models/: __init__.py  canonical_types.py  connector.py  endpoint_identity.py  endpoints.py  type_map.py
contract-models/k2m/models/shared/: arrow_shape.py  common.py
docs/design/: contract-derived-research.md  drift-audit.md
plugins/analitiq-connector-builder/: CHANGELOG.md  CLAUDE.md  README.md
plugins/analitiq-pipeline-builder/: CHANGELOG.md  CLAUDE.md  README.md
schemas/: canonical-types.json
schemas/api-endpoint/: 1.0.0.json  10.0.0.json  11.0.0.json  12.0.0.json  13.0.0.json  14.0.0.json  14.0.1.json  15.0.0.json  2.0.0.json  3.0.0.json  3.1.0.json  4.0.0.json  5.0.0.json  6.0.0.json  7.0.0.json  8.0.0.json  9.0.0.json  9.1.0.json  9.1.1.json  index.json  latest.json
schemas/connection/: 1.0.0.json  10.0.0.json  2.0.0.json  3.0.0.json  4.0.0.json  5.0.0.json  6.0.0.json  7.0.0.json  8.0.0.json  8.0.1.json  8.0.2.json  9.0.0.json  9.0.1.json  index.json  latest.json
schemas/connector/: 1.0.0.json  10.0.0.json  11.0.0.json  12.0.0.json  13.0.0.json  14.0.0.json  14.1.0.json  14.1.1.json  14.1.2.json  14.1.3.json  15.0.0.json  16.0.0.json  17.0.0.json  18.0.0.json  18.1.0.json  18.1.1.json  19.0.0.json  19.1.0.json  2.0.0.json  3.0.0.json  4.0.0.json  5.0.0.json  6.0.0.json  7.0.0.json  8.0.0.json  9.0.0.json  index.json  latest.json
schemas/credentials/: 1.0.0.json  1.0.1.json  index.json  latest.json
schemas/data-sync-api/: openapi.json
schemas/data-sync-run-accepted/: 1.0.0.json  1.0.1.json  index.json  latest.json
schemas/data-sync-run-request/: 1.0.0.json  1.0.1.json  index.json  latest.json
schemas/data-sync-run-response/: 1.0.0.json
schemas/data-sync-run-status/: 1.0.0.json  1.0.1.json  2.0.0.json  index.json  latest.json
schemas/data-sync-terminate-response/: 1.0.0.json  1.0.1.json  index.json  latest.json
schemas/database-endpoint/: 1.0.0.json  10.0.0.json  11.0.0.json  12.0.0.json  2.0.0.json  3.0.0.json  4.0.0.json  5.0.0.json  6.0.0.json  7.0.0.json  7.0.1.json  8.0.0.json  8.0.1.json  9.0.0.json  index.json  latest.json
schemas/pipeline/: 1.0.0.json  2.0.0.json  3.0.0.json  4.0.0.json  5.0.0.json  6.0.0.json  6.0.1.json  6.0.2.json  6.0.3.json  7.0.0.json  8.0.0.json  8.0.1.json  9.0.0.json  index.json  latest.json
schemas/stream/: 1.0.0.json  10.0.0.json  11.0.0.json  11.0.1.json  12.0.0.json  13.0.0.json  14.0.0.json  15.0.0.json  15.0.1.json  16.0.0.json  2.0.0.json  3.0.0.json  (+9 more)
scripts/: check_engine_grammar_pin.py  check_validator_pin_contract.py  render_advisory.py  render_schemas.py  validate_connector.py
validator/: README.md  pyproject.toml
validator/src/: analitiq_connector_validator.py
(+148 files in other folders)
