[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "analitiq-contract-models"
version = "0.1.0"
description = "Analitiq connector/endpoint contract models (Pydantic) — the single source the published JSON Schemas and the connector validator both derive from."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Analitiq" }]
keywords = ["analitiq", "connector", "contract", "pydantic", "validation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
# Only external dependency. The models are pure Pydantic — no AWS/boto3/private
# code (the boto3-coupled connection/stream/pipeline models are intentionally
# excluded; the connector validator does not need them).
dependencies = ["pydantic>=2.12,<3"]

[project.urls]
Homepage = "https://github.com/analitiq-ai/claude-plugin-connector"
Issues = "https://github.com/analitiq-ai/claude-plugin-connector/issues"

# Ships the boto3-free `k2m.models` subset (connector, endpoints, type-maps +
# their shared blocks). Canonical source is the analitiq-ai/infrastructure
# repo's alq-models layer, staged verbatim by scripts/build.py on release — one
# implementation, no re-authoring.
[tool.setuptools]
packages = ["k2m", "k2m.models", "k2m.models.shared"]
