[build-system]
# >=77 for the PEP 639 SPDX `license` string below; pip provides it via build isolation.
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "analitiq-connector-validator"
version = "0.1.0"
description = "Layer 1 (JSON Schema) + Layer 2 (semantic) validator for Analitiq connector, endpoint, and type-map documents."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Analitiq" }]
keywords = ["analitiq", "connector", "json-schema", "validation", "type-map"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
# The validator validates via the Analitiq contract models (which pull pydantic).
# Published installs resolve the models from the same public repo (they are
# synced there together on release); run-by-path uses the vendored sibling
# instead (see the sys.path bootstrap in the module).
dependencies = [
    "analitiq-contract-models @ git+https://github.com/analitiq-ai/claude-plugin-connector.git@validator-v0.1.0#subdirectory=contract-models",
]

[project.scripts]
analitiq-validate-connector = "analitiq_connector_validator:main"

[project.urls]
Homepage = "https://github.com/analitiq-ai/claude-plugin-connector"
Issues = "https://github.com/analitiq-ai/claude-plugin-connector/issues"

# Single-module package living under src/ (src layout). The module is the
# same file the plugin runtime executes by path, so the plugin and registry CI
# run one file. Canonical source is the analitiq-ai/infrastructure repo
# (validator/), which builds this directory and syncs it here on release; a
# parity test there gates it against the Pydantic contract models.
[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["analitiq_connector_validator"]
